2006-09-07  Thomas Moschny  <thomas.moschny@gmx.de>

	* automate.cc (rev_height): New command to query a rev's
	height. Preliminary.

2006-09-07  Thomas Moschny  <thomas.moschny@gmx.de>

	* database.cc (put_revision): Determine the revision's height and
	write it to the database.

2006-09-07  Thomas Moschny  <thomas.moschny@gmx.de>

	* database.cc (get_rev_height, put_rev_height, has_rev_height):
	New methods for storing and retrieving revision heights.

2006-09-06  Thomas Moschny  <thomas.moschny@gmx.de>

	* rev_height.cc (operator<): Fix a logic bug.
	(child_height): Fix an index bug introduced by refactoring.

2006-09-06  Thomas Moschny  <thomas.moschny@gmx.de>

	* rev_height.cc, rev_height.hh: Get rid of that ugly
	char[]. Correct a bug in operator<().
	* Makefile.am (MOST_SOURCES): Add rev_height.{cc|hh}.

2006-09-06  Thomas Moschny  <thomas.moschny@gmx.de>

	* rev_height.cc, rev_height.hh: Add a class for the revision
	height.

2006-09-04  Thomas Moschny  <thomas.moschny@gmx.de>

	* schema.sql: new table for the revision heights.
	* database.cc (database): new schema.
	* schema_migration.cc (migrate_monotone_schema): add code for the
	  schema migration.
	* tests/schema_migration/__driver__.lua: add migration test.

2006-09-04  Alex Queiroz  <alex@ventonegro.org>

	* po/pt_BR.po: Remaining strings translated. Job done, yay!

2006-09-03  Alex Queiroz  <alex@ventonegro.org>

	* po/pt_BR.po: Fuzzies fixed and more strings translated.

2006-08-31  Nathaniel Smith  <njs@pobox.com>

	* charset.cc (system_charset_is_ascii_extension_impl): Add "646".

2006-08-31  Nathaniel Smith  <njs@pobox.com>

	* work.cc (update_any_attrs): Remove stale comment.

2006-08-30  Zack Weinberg  <zackw@panix.com>

	* restrictions.hh (class restriction): Remove 'app' member.
	Remove app_state arguments from both constructors.
	(class node_restriction): Remove app_state argument from
	the constructor that doesn't take any file_path vectors.
	(class path_restriction): Likewise.